# nbody

./: .gitignore  CMakeLists.txt  CMakePresets.json  FEATURES.md  TESTING.md  TODO.md  build.bat  imgui.ini  installed.txt  main  shell.nix  vcpkg.json
src/: camera.hpp  constants.hpp  gui.hpp  main.cpp  resourcemanager.hpp  shader.hpp  simulator.hpp  util.hpp
src/debug/: cpuBHDebug.hpp  gpuBHDebug.hpp  gpuBHDebugExtended.hpp
src/include/glad/: glad.c  glad.h
src/objects/: initializer.hpp  nbody.hpp  points.hpp
src/objects/octree/: octree.hpp
src/post-processing/: bloom.hpp
src/rendering/: bloom.hpp  util.hpp
src/resources/: resourcemanager.hpp  shader.hpp
src/resources/shaders/: nbodyPositions.glsl  nbodyVelocities.glsl  nbodyVelocitiesBH.glsl
src/resources/shaders/bvh/: buildRadixTree.glsl  initTree.glsl  mortonCodes.glsl  propagateCoM.glsl  radixHistogram.glsl  radixPrefixSum.glsl  radixScatter.glsl
src/resources/shaders/circles/: circle.frag  circle.vert
src/resources/shaders/octree/: octree.frag  octree.vert
src/resources/shaders/physics/: nbodyVelocities.glsl  nbodyVelocitiesBH.glsl  nbodyVelocitiesGPUBH.glsl
src/resources/shaders/points/: point.frag  point.vert
src/resources/shaders/post-processing/: blendBloom.frag  blendBloom.vert  gaussBlur.glsl
src/shaders/: nbody.glsl  nbodyPositions.glsl  nbodyVelocities.glsl  point.frag  point.vert
src/simulation/: initializer.hpp  nbody.hpp
src/simulation/octree/: octreeRenderer.hpp
